# hiring-firmware-skeleton-c

./: .gitignore  CMakeLists.txt  README.md  flake.nix
src/: main.c
